[project]
name = "command-line-assistant"
version = "0.1.1"
description = "A simple wrapper to interact with RAG"
authors = [
    { name = "RHEL Lightspeed team", email = "rhel-sst-lightspeed@redhat.com" },
]
maintainers = [
    { name = "Rodolfo Olivieri", email = "rolivier@redhat.com" },
    { name = "Major Hayden", email = "mhayden@redhat.com" },
]
requires-python = ">=3.9" # RHEL 9 and 10
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Repository = "https://github.com/rhel-lightspeed/command-line-assistant.git"
Issues = "https://github.com/rhel-lightspeed/command-line-assistant/issues"

[build-system]
# pdm build is not available in rhel baseos repositories
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# ----- Tooling specifics

[tool.setuptools]
packages = ["command_line_assistant"]

[tool.pdm]
distribution = true